[build-system]
requires = ["setuptools>=68.0", "cython>=3.0.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shm-detect-tool"
version = "0.8.2"
description = "Shmoo log analysis tool based on PyTorch CNN"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.9"
authors = [
    { name = "Chao Zhou", email = "zhouchao486@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "torch>=2.0.0",
    "pandas>=1.3.0",
    "XlsxWriter>=3.1.9",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
gui = ["PyQt5", "qtawesome", "matplotlib"]
webapp = ["streamlit>=1.38.0"]
dev = ["pytest", "build", "twine"]

[project.scripts]
shm-detect = "shm_detect_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shm_detect_tool*"]

[tool.setuptools.package-data]
# Include the default config, default model, compiled Cython extensions, and plain Python entry points
shm_detect_tool = [
    "*.json",
    "*.pth",
    "*.so",
    "*.pyd",
    "Source/*.so",
    "Source/*.pyd",
]

[tool.setuptools.exclude-package-data]
# Exclude Cython-generated .c files from the wheel
shm_detect_tool = ["*.c", "Source/*.c"]
